# na-T-na-AI

./: Dockerfile  README.md  __init__.py  app.py  app_mock.py  chat.py  chat_s3.py  chat_tudak.py  chat_tudak_s3.py  chat_with_tts.py  debug_storage.py  docker-compose.yml  main.py  main_default.py  main_log.py  main_with_tts.py  main_without_tts.py  module.py  nginx.conf  pyproject.toml  s3_utils.py  test1.ipynb
.cache/: chats.json
Benchmark/: Clova_API_Benchmark.ipynb  speed.py
chat_data/: test_user_test_bot.json
config/: params.yaml
experiments/: chat2.py  chat_s3.py  chat_without_tts.py  main_log.py  main_log2.py  main_tudak.py
test/: sample.ipynb  test.ipynb  test1.ipynb  test2.ipynb  test3.ipynb  test4.ipynb
