[project]
name = "natna"
version = "0.1.0"
description = ""
authors = [
    {name = "Hongbi-Kim",email = "hongbi1620@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-naver (>=0.1.0,<0.2.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
